[gd_scene load_steps=9 format=3 uid="uid://b0cxo7ec8k12v"]

[ext_resource type="Script" path="res://project/objects/frog_launcher.gd" id="1_e3dds"]
[ext_resource type="PackedScene" uid="uid://b363d3t68xtgg" path="res://project/objects/frog_launcher_rotation.tscn" id="2_ablhd"]
[ext_resource type="Texture2D" uid="uid://07nctieihx8i" path="res://assets/Space_cannon-Sheet.png" id="3_n3mrd"]
[ext_resource type="PackedScene" uid="uid://ctmqe5vhfqfk3" path="res://project/objects/frog_launcher/frog_launcher_power.tscn" id="3_vhhbr"]
[ext_resource type="PackedScene" uid="uid://c06fakcjq4rht" path="res://project/objects/frog_launcher/launch_menu.tscn" id="4_5ybva"]
[ext_resource type="PackedScene" uid="uid://kiqi1srq1ish" path="res://project/objects/frog_launcher/launch_button.tscn" id="4_ht8bi"]

[sub_resource type="Animation" id="Animation_koje5"]
resource_name = "launch"
length = 2.0
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9, 0.975, 1.05, 1.125, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 8, 7, 9, 10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.975),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch_frog"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hil3u"]
_data = {
"launch": SubResource("Animation_koje5")
}

[node name="FrogLauncher" type="Node2D"]
script = ExtResource("1_e3dds")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../frog_launcher_rotation/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_hil3u")
}

[node name="frog_launcher_rotation" parent="." instance=ExtResource("2_ablhd")]

[node name="Sprite2D" type="Sprite2D" parent="frog_launcher_rotation"]
rotation = 1.5708
texture = ExtResource("3_n3mrd")
hframes = 17

[node name="frog_launcher_power" parent="." instance=ExtResource("3_vhhbr")]
position = Vector2(0, 73)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="launch_menu" parent="CanvasLayer" instance=ExtResource("4_5ybva")]
visible = false

[node name="launch_button" parent="CanvasLayer" instance=ExtResource("4_ht8bi")]
mouse_filter = 2

[connection signal="launch_rotation_changed" from="frog_launcher_rotation" to="." method="_on_frog_launcher_rotation_launch_rotation_changed"]
[connection signal="launch_power_changed" from="frog_launcher_power" to="." method="_on_frog_launcher_power_launch_power_changed"]
[connection signal="pressed" from="CanvasLayer/launch_menu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/launch_button/launch_button" to="." method="_on_launch_button_pressed"]

[editable path="CanvasLayer/launch_menu"]
[editable path="CanvasLayer/launch_button"]
